# loan_scorer

./: .gitignore  pyproject.toml  readme.md
bruno/: Root.bru  bruno.json  predict.bru
notebook/: model_training.ipynb
web_app/: main.py
