[tool.poetry]
name = "loan-scorer"
version = "0.1.0"
description = "Loan Scoring Project"
authors = ["m-root"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
joblib = "^1.4.2"
numpy = "^2.1.1"
jupyter = "^1.1.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
scipy = "^1.14.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
